--- a/LernPlatform/package.json
+++ b/LernPlatform/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "express": "~4.0.0",
+        "express": "*",
         "mongodb": "*",
         "mongoskin": "*"
     }
